# Vargi-Bots-eYRC

./: .gitmodules  README.md  git operations
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/aws_robomaker_small_warehouse_world/: .catkin  local_setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
catkin_ws/devel/.private/gazebo_conveyor/: .catkin  local_setup.sh
catkin_ws/logs/gazebo_ros_link_attacher/: build.cmake.000.log.stderr
catkin_ws/logs/hrwros_gazebo/: build.symlink.004.log.stderr
catkin_ws/logs/ur_kinematics/: build.make.000.log.stderr
catkin_ws/src/pkg_iot_ros_bridge/: CMakeLists.txt
catkin_ws/src/pkg_moveit_ur5_1/: .setup_assistant
catkin_ws/src/pkg_ros_actions/: CMakeLists.txt  package.xml
catkin_ws/src/pkg_ros_basics/: CMakeLists.txt
catkin_ws/src/pkg_ros_basics/config/: config_my.yaml
catkin_ws/src/pkg_ros_basics/launch/: chatter.launch  load_yaml.launch  turtlesim.launch  web_node.launch  webpage_launch.sh
catkin_ws/src/pkg_ros_basics/scripts/: node_hello_ros.py  node_myMsg_listener.py  node_myMsg_talker.py
catkin_ws/src/pkg_ros_iot_bridge/: CMakeLists.txt
catkin_ws/src/pkg_t2_examples/: CMakeLists.txt
catkin_ws/src/pkg_task0/: CMakeLists.txt
catkin_ws/src/pkg_task1/: CMakeLists.txt
catkin_ws/src/pkg_task2/: CMakeLists.txt
catkin_ws/src/pkg_task3/: package.xml
catkin_ws/src/pkg_task4/: CMakeLists.txt  package.xml
(+1502 files in other folders)
